Fix overlapping text

--- a/src/components/site-footer/site-footer.scss
+++ b/src/components/site-footer/site-footer.scss
@@ -7,6 +7,9 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  @media screen and (max-width: $screen-md-max) {
+    padding-bottom: 5rem;
+  }
 
   &__lead-txt {
     font-size: $font-size-heading;
