--- a/src/templates/blog-index/blog-index.scss
+++ b/src/templates/blog-index/blog-index.scss
@@ -7,5 +7,6 @@
 
   @media screen and (max-width: $screen-lg-min) {
     width: 100%;
+    margin-top: 1rem;
   }
 }
